<resources>
    <string name="app_name">Words Guide</string>

    <string name="app_startup_info">
        Welcome to Words Guide!\n
        Sign In and discover magnificent world of the lyrics.
    </string>
    <string name="btn_sign_in_via_email">Sign in</string>

    <!-- Menu -->
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_home">Home</string>

    <!-- HomeActivity -->
    <string name="app_home_text">Welcome!</string>
    <string name="btn_search_song">Search song</string>
    <string name="btn_charts">Charts</string>
    <string name="btn_favorites">Favorites</string>

    <!-- Search Activity -->
    <string name="search_activity_label">Search</string>
    <string name="edit_text_track_hint">Type song title</string>
    <string name="edit_text_artist_hint">Type artist</string>
    <string name="btn_search_text">Search</string>
    <string name="no_track_specified">Type song title!</string>
    <string name="no_results">No results, try again!</string>

    <!-- SearchResults Activity -->
    <string name="search_results_activity_label">Results</string>

    <!-- Track item -->
    <string name="track_cover_image">Track cover</string>

    <!-- Track Activity -->
    <string name="track_activity_label">Lyrics</string>
    <string name="message_track_added_to_favorites">Track successfully added to favorites!</string>
    <string name="share_track">Share track</string>

    <!-- Favorites Activity -->
    <string name="favorites_activity_label">Favorites</string>
    <string name="message_track_removed_from_favorites">Track successfully removed from favorites!</string>
    <string name="btn_remove_track_from_favorites">Remove from favorites</string>

    <!-- Charts Activity -->
    <string name="charts_activity_label">Charts</string>
    <string name="charts_info">Top %1$s tracks in %2$s</string>
    <string name="btn_select_country">Select other country</string>

    <!-- General -->
    <string name="app_offline">You are offline.</string>
    <string name="appwidget_text">Words Guide</string>

    <!-- Widget -->
    <string name="add_widget">Add widget</string>
    <string name="widget_info">Recently displayed:</string>

</resources>
