<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_home"
        android:title="@string/menu_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:title="@string/search_activity_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorites"
        android:title="@string/favorites_activity_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/charts"
        android:title="@string/charts_activity_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/sign_out"
        android:title="@string/menu_sign_out"
        app:showAsAction="never" />
</menu>